examples/test/testpolicy11870.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11870
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key9: value21
      key28: value20
      key23: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value40
      podSelector:
        matchLabels:
          key22: value17
          key13: value17
          key45: value35
